webhook/kubernetes/validate/validate.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
 name: validate-webhook
webhooks:
 - name: validate-admission.scabarrus.com
   sideEffects: None
   admissionReviewVersions: ["v1","v1beta1"]
   clientConfig:
     service:
       name: validate
       namespace: webhook
       path: "/"
     caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeE1ERXhOREl4TVRjek9Wb1hEVE14TURFeE1qSXhNVGN6T1Zvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTlhTCi9iUEIxYWVna3g2OEpwbnpQSWdlTkYyZ05lQU9OR1JEZ29FRyt5ZFhTLzlXNXdldXFaZVNSK2JmRS9Lb3ZaVTYKZ2Izb3RDWGhvMUZ3Y1NNMFJ4TjRPQUxiNlk2OExNRWs0YVEvTWJNUzlHQ3YzYVFPemZQVnFEZ0ZUdDByQWw0TgpiK2trNXpCaUtvZ [...]
   rules:
     - operations: ["CREATE","UPDATE"]
       apiGroups: [""]
       apiVersions: ["*"]
       resources: ["pods","deployments"]
   failurePolicy: Ignore
